--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,7 @@
   --mt-list-line-height: 1.95rem;
   --mt-hero-line-height-title: 1;
   --mt-hero-line-height-subtitle: 1.5;
+  --mt-nav-height: 90px;
 
   /* feature font sizes */
   --mt-body-font-size-m: var(--mt-font-size-100);
@@ -204,6 +205,10 @@ main pre {
   border-radius: .25em;
   overflow-x: auto;
   white-space: pre;
+}
+
+header {
+  height: var(--mt-nav-height);
 }
 
 hr {
